Optimize: Remove clipping, hide loader, preload assets

--- a/templates/components/robot.html
+++ b/templates/components/robot.html
@@ -23,12 +23,12 @@
     <div class="relative w-full h-full z-10" id="spline-container">
         <!-- 
             Adjusted: 
-            1. Removed 'overflow-hidden' from parent to prevent clipping of hands.
-            2. Added background="transparent" to spline-viewer.
-            3. Removed opaque logo cover.
+            1. Removed 'overflow-hidden' from parent (done).
+            2. Added background="transparent" to spline-viewer (done).
+            3. loading-anim-type="none" to hide spinner (done).
         -->
-        <spline-viewer url="https://prod.spline.design/kZDDjO5HuC9GJUM2/scene.splinecode"
-            loading-anim-type="spinner-small-light" background="transparent"></spline-viewer>
+        <spline-viewer url="https://prod.spline.design/kZDDjO5HuC9GJUM2/scene.splinecode" loading-anim-type="none"
+            background="transparent"></spline-viewer>
     </div>
 </div>
 
