--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,6 +8,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/framer-motion@10/dist/framer-motion.umd.min.js"></script>
     <script src="https://unpkg.com/lucide-dev@latest"></script>
+    <link rel="preconnect" href="https://prod.spline.design">
+    <link rel="preload" href="https://unpkg.com/@splinetool/viewer@1.0.51/build/spline-viewer.js" as="script">
     <script type="module" src="https://unpkg.com/@splinetool/viewer@1.0.51/build/spline-viewer.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
