Layout: Lift robot on desktop/mobile

--- a/templates/components/robot.html
+++ b/templates/components/robot.html
@@ -1,5 +1,5 @@
 <div
-    class="w-full h-[500px] md:h-[600px] lg:h-[700px] relative flex flex-col justify-center items-center overflow-visible">
+    class="w-full h-[500px] md:h-[600px] lg:h-[700px] relative flex flex-col justify-center items-center overflow-visible -mt-8 md:-mt-24">
     <!-- Spotlight Effect -->
     <div class="absolute -top-40 left-0 md:left-60 md:-top-20 pointer-events-none z-[1] w-full h-full">
         <svg class="animate-spotlight w-[150%] h-[150%] lg:w-[100%]" xmlns="http://www.w3.org/2000/svg"
