--- a/templates/superadmin/profile.html
+++ b/templates/superadmin/profile.html
@@ -2,6 +2,10 @@
 
 {% block title %}Edit Super Admin Profile - QMS{% endblock %}
 
+{% block header_button %}
+{% include 'components/user_header.html' %}
+{% endblock %}
+
 {% block content %}
 <h2 class="text-3xl font-semibold mb-8 text-gray-100">Edit Super Admin Profile</h2>
 <div class="card p-8 md:p-10 max-w-2xl mx-auto">
