--- a/templates/register.html
+++ b/templates/register.html
@@ -7,7 +7,7 @@
 
     {% include 'components/robot.html' %}
     <div class="card p-8 md:p-10">
-        <h2 class="text-3xl font-semibold mb-8 text-center text-gray-100">Admin Registration</h2>
+        <h2 class="text-3xl font-semibold mb-8 text-center text-gray-100">Staff Registration</h2>
         <form action="{{ url_for('register') }}" method="POST">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-5 mb-5">
                 <div>
