--- a/templates/staff/events.html
+++ b/templates/staff/events.html
@@ -3,10 +3,7 @@
 {% block title %}My Events - QMS{% endblock %}
 
 {% block header_button %}
-<div class="flex gap-4">
-    <a href="{{ url_for('admin_profile') }}" class="btn btn-ghost text-sm">My Profile</a>
-    <a href="{{ url_for('logout') }}" class="btn btn-danger text-sm">Logout</a>
-</div>
+{% include 'components/user_header.html' %}
 {% endblock %}
 
 {% block content %}
@@ -30,7 +27,7 @@
                     }}</b></span>
         </div>
         <div class="flex flex-col md:flex-row items-center gap-8 mb-6">
-            <img src="{{ url_for('qr_code', event_id=event['event_id']) }}" alt="Event QR Code"
+            <img src="{{ url_for('qr_code_route', event_id=event['event_id']) }}" alt="Event QR Code"
                 class="p-3 bg-white border-4 border-gray-300 rounded-lg">
             <div class="flex-grow">
                 <p class="text-sm text-gray-200 mt-2">Scan the code or use the link:</p>
