--- a/templates/superadmin/edit_form.html
+++ b/templates/superadmin/edit_form.html
@@ -2,6 +2,10 @@
 
 {% block title %}Edit Event Form - QMS{% endblock %}
 
+{% block header_button %}
+{% include 'components/user_header.html' %}
+{% endblock %}
+
 {% block content %}
 <h2 class="text-3xl font-semibold mb-2 text-gray-100">Edit Event Form</h2>
 <p class="text-gray-300 mb-8">You are editing the form for <b class="text-blue-300">{{ event['event_name'] }}</b>.</p>
